--- a/overleaf/main.tex
+++ b/overleaf/main.tex
@@ -41,40 +41,27 @@
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-% \author{First Author\inst{1}\orcidID{0000-1111-2222-3333} \and
-% Second Author\inst{2,3}\orcidID{1111-2222-3333-4444} \and
-% Third Author\inst{3}\orcidID{2222--3333-4444-5555}}
-% \author{Saad Ahmad\thanks{Saad Ahmad and Sudhir Attri contributed equally to this work.} \inst{1}\and Sudhir Attri\samethanks \inst{1}\and Ruchi Dwivedi \inst{2} \and Muzamil Yaqoob \inst{3} \and Aasim Khan \inst{1} \and Praveen Priyadarshi \inst{1} \and Raghava Mutharaju \inst{1}}
-%
 % \authorrunning{S. Ahmed et al.}
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
 % \institute{
-% IIIT-Delhi, Delhi, India. \\
-% \email{\{saad18409,sudhir18267,aasim,praveen,raghava.mutharaju\}@iiitd.ac.in}
-% %\url{https://kracr.iiitd.edu.in/} 
-% \and 
-% Dr. B. R. Ambedkar University, Delhi, India. \\ 
-% \email{ruchid1231@gmail.com}
-% \and 
-% IIT Delhi,
-% Delhi, India. \\ 
-% \email{muzamilyaqoob5@gmail.com}}
+% *****-*****, *****, *****. \\
+% %\url{https://*****.*****.***.**/} 
 %
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-Air Quality Index (AQI) is a number aggregated from several air quality sensors deployed in an area. AQI is useful in communicating the air quality to the general public and in making governance decisions to tackle air pollution. However, our ethnographic surveys revealed the existence of a knowledge barrier in interpreting the AQI and data illiteracy in understanding AQI-related charts and trends commonly facilitated by government organizations. This knowledge gap is wider for the marginalized sections of society, who, it turns out, are more exposed to pollution. We use an ontological approach to homogenize the air quality data with social and spatial aspects. The Social Air Quality Index (SAQI) ontology integrates the data from local and central air quality monitoring sensors, meteorological data, and field surveys. This data is converted into a Knowledge Graph, which is used to build an application for civic engagement with the public on pollution to improve community participation of the local institutions and individuals. We evaluated this application through a user survey and received positive feedback. The ontologies, code, and datasets are available under the Apache 2.0 License at \url{https://github.com/kracr/aq-structured-platform}. 
+Air Quality Index (AQI) is a number aggregated from several air quality sensors deployed in an area. AQI is useful in communicating the air quality to the general public and in making governance decisions to tackle air pollution. However, our ethnographic surveys revealed the existence of a knowledge barrier in interpreting the AQI and data illiteracy in understanding AQI-related charts and trends commonly facilitated by government organizations. This knowledge gap is wider for the marginalized sections of society, who, it turns out, are more exposed to pollution. We use an ontological approach to homogenize the air quality data with social and spatial aspects. The Social Air Quality Index (SAQI) ontology integrates the data from local and central air quality monitoring sensors, meteorological data, and field surveys. This data is converted into a Knowledge Graph, which is used to build an application for civic engagement with the public on pollution to improve community participation of the local institutions and individuals. We evaluated this application through a user survey and received positive feedback. The ontologies, code, and datasets are available under the Apache 2.0 License at \url{https://github.com/anon-DC1E/SAQI-ER-24}. 
 
 \keywords{Air Pollution \and AQI \and  Ethnography \and Community Participation \and Data Integration \and Ontology  \and Knowledge Graph \and Social AQI} \\
 
 %\textbf{Resource type:} Ontology, Knowledge Graph, Web Application \\
 %\textbf{License:} Apache License 2.0 \\
-%\textbf{DOI:} \url{https://doi.org/10.5281/zenodo.10300235} \\
+%\textbf{DOI:} \url{https://doi.org/XX.XXXXX/zenodo.XXXXXXXX} \\
 % \todo[inline]{KG, raw sensor and survey data on Zenodo?}
-%\textbf{GitHub:} \url{https://github.com/kracr/aq-structured-platform} \\
-%\textbf{Documentation:} \url{https://w3id.org/saqi}
+%\textbf{GitHub:} \url{https://github.com/anon-DC1E/SAQI-ER-24} \\
+%\textbf{Documentation:} \url{https://https://saqi-er24.netlify.app/saqi}
 
 %
 \end{abstract}
