--- a/overleaf/sections/introduction.tex
+++ b/overleaf/sections/introduction.tex
@@ -3,12 +3,12 @@
 
 Air pollution is a significant problem across the major cities of the World and is also a part of the sustainable development goals\footnote{\url{https://www.un.org/sustainabledevelopment/health/}}. Tackling it, however, is a rather complex task as the solution lies at the intersection of society, politics, science and technology. Air pollution has a substantial spatial variance. Even within one city, air quality can vary greatly depending on the locality, proximity to industrial areas, population density, etc. To tackle air pollution, government agencies frame policies for mitigating the sources of pollution, increasing civic engagement and promoting standardized air quality indices such as the Air Quality Index (AQI). In this work, we delve into the latter two aspects, i.e., improving community engagement and studying AQI from the perspective of different social cohorts. This led to a socially relevant AQI, which we named Social AQI (SAQI). 
 
-We conducted an ethnographic survey at six different locations in Delhi, India, which is one of the most polluted cities in the World. At these six locations, we have also deployed air quality sensors to record the hyperlocal AQI. The details of the data collection and the survey results are discussed in Section~\ref{sec:req-analysis}. To model and integrate these disparate and heterogenous datasets, we built a SAQI Ontology (\href{w3id.org/saqi}{saqi}). This ontology~\cite{Ont-NG-2009} captures the relationship between the seemingly unrelated concepts in the datasets, which in turn are used to construct a Knowledge Graph (KG)~\cite{KG-ACMSurvey2021}. A SAQI app is built on top of the KG. This app considers the different social cohorts and their understanding of the AQI. The following are our contributions.
+We conducted an ethnographic survey at six different locations in Delhi, India, which is one of the most polluted cities in the World. At these six locations, we have also deployed air quality sensors to record the hyperlocal AQI. The details of the data collection and the survey results are discussed in Section~\ref{sec:req-analysis}. To model and integrate these disparate and heterogenous datasets, we built a SAQI Ontology (\href{https://saqi-er24.netlify.app/saqi}{saqi}). This ontology~\cite{Ont-NG-2009} captures the relationship between the seemingly unrelated concepts in the datasets, which in turn are used to construct a Knowledge Graph (KG)~\cite{KG-ACMSurvey2021}. A SAQI app is built on top of the KG. This app considers the different social cohorts and their understanding of the AQI. The following are our contributions.
 \begin{enumerate}
-    \item An ontology (\href{w3id.org/saqi}{saqi}) that models the data from the air quality sensors and the ethnographic survey data. This is built using our Pollution ontology design pattern\footnote{\url{http://ontologydesignpatterns.org/wiki/Submissions:Pollution}}~\cite{Saad-PollutionODP-WOP2021} and is available at \url{https://github.com/kracr/aq-structured-platform}. The documentation is at \url{https://w3id.org/saqi}.
-    \item A SAQI KG that integrates the air pollution data from local and central sensors with the data from the ethnographic survey. YARRML\footnote{\url{https://rml.io/yarrrml/spec/}} is used to convert the sensor and survey data into a KG. These mappings, along with the SHACL\footnote{\url{https://www.w3.org/TR/shacl/}} constraints and SPARQL queries on the KG, are available at \url{https://doi.org/10.5281/zenodo.10300235}. The SPARQL endpoint over the KG is available at \url{https://w3id.org/saqi/sparql}.
-    \item An SAQI App that is built using the KG to encourage community engagement and response. This is available at \url{https://w3id.org/saqi/app}.
-    \item The two datasets -- ethnographic survey questionnaire along with the responses and the hyperlocal air quality data from six different locations in Delhi. This is available at \url{https://doi.org/10.5281/zenodo.10300235}. These datasets will be helpful to social scientists, environmental scientists, biophysicists and biochemists.  
+    \item An ontology (\href{https://saqi-er24.netlify.app/saqi}{saqi}) that models the data from the air quality sensors and the ethnographic survey data. This is built using our Pollution ontology design pattern\footnote{\url{http://ontologydesignpatterns.org/wiki/Submissions:Pollution}}~\cite{Saad-PollutionODP-WOP2021} and is available at \url{https://github.com/anon-DC1E/SAQI-ER-24}. The documentation is at \url{https://https://saqi-er24.netlify.app/saqi}.
+    \item A SAQI KG that integrates the air pollution data from local and central sensors with the data from the ethnographic survey. YARRML\footnote{\url{https://rml.io/yarrrml/spec/}} is used to convert the sensor and survey data into a KG. These mappings, along with the SHACL\footnote{\url{https://www.w3.org/TR/shacl/}} constraints and SPARQL queries on the KG, are available at \url{https://doi.org/XX.XXXXX/zenodo.XXXXXXXX}. The SPARQL endpoint over the KG is available at \url{https://https://saqi-er24.netlify.app/saqi/sparql}.
+    \item An SAQI App that is built using the KG to encourage community engagement and response. This is available at \url{https://https://saqi-er24.netlify.app/saqi/app}.
+    \item The two datasets -- ethnographic survey questionnaire along with the responses and the hyperlocal air quality data from six different locations in Delhi. This is available at \url{https://doi.org/XX.XXXXX/zenodo.XXXXXXXX}. These datasets will be helpful to social scientists, environmental scientists, biophysicists and biochemists.  
 \end{enumerate}
 
 %This paper will describe the initial investigation to understand the social aspect of pollution awareness and provide a requirement analysis leading to the development of Air pollution ontology.
@@ -27,7 +27,7 @@ We conducted an ethnographic survey at six different locations in Delhi, India, 
 
 %1. Ontology - Description of ontology - link
 %2. ODP - 1-2 line desc. - link (ODP repo) - (ontologydesignpatterns.org/wiki/Submissions:Pollution)
-%3. App - saqi app (host it to kracr website)
+%3. App - saqi app (host it to ***** website)
 %4. Survey+ Hyperlocal data - Link to access (not on Gdrive) - zenodo (open liscence) surrvey responses csv and form, 6 sensor location.
 %Useful for - researchers (SS people), delhi pollution, or pollution awareness across different social groups in Delhi.
 
