--- a/overleaf/sections/sustainability.tex
+++ b/overleaf/sections/sustainability.tex
@@ -3,4 +3,4 @@
 
 Since the YARRRML mappings are used, it is easy to generate KG from air quality sensor data and survey data. This is scalable, i.e., we can expand to more regions and get more data. As long as the format of the data does not change, the process of converting heterogeneous sensor and survey data to KG is sustainable. Over time, the SAQI ontology and the application may need changes. We will continue to work on SAQI platform and make changes whenever required. We also hope that the community will be interested and will take this up. Since all the resources are publicly available, it is possible to make changes and share them with the community. 
 
-%KRACR lab \footnote{Kracr lab - \url{https://kracr.iiitd.edu.in}} is hosting the SAQI knowledge graph and the live version of app through infrastructure provided by IIIT Delhi. The data is available as triples through the server hosted at \url{https://kracr.iiitd.edu.in/sparql} and the raw data files along with mapping scripts, and processed csv files are hosted through zenodo \footnote{Zenodo - \url{https://zenodo.org/}}.
+%***** lab \footnote{***** lab - \url{https://*****.*****.***.**}} is hosting the SAQI knowledge graph and the live version of app through infrastructure provided by ***** *****. The data is available as triples through the server hosted at \url{https://*****.****.***.**/sparql} and the raw data files along with mapping scripts, and processed csv files are hosted through zenodo \footnote{Zenodo - \url{https://zenodo.org/}}.
